fixed contact box padding to force center alignment

--- a/assets/css/3-sections/_contact.sass
+++ b/assets/css/3-sections/_contact.sass
@@ -19,7 +19,7 @@
         .borderbox
 
             display: inline-block
-            margin: 2em
+            margin: 2em 0
             padding: 0.3em 0
             width: 100%
             border: solid
